src/code/snapshots/tvm__code__tests__basic_loop_0.snap
---
source: src/code/tests.rs
expression: "emit!(r#\"\n        loop {}\n    \"#)"
---
function "main" {
  registers: 0 (0 params)
  constants: []
  bytecode: (3 ops) [
    jmp 0  // loop {}
    ret    // 
    stop   //   
  ]
}


