src/code/snapshots/tvm__code__tests__basic_loop_1.snap
---
source: src/code/tests.rs
expression: "emit! (r#\"\n        loop {\n            let v = 0;\n        }\n    \"#)"
---
fn main
  registers: 2
  literals: []
  bytecode:
    load_i16 dst=1 value=0
    jump offset=-1
    load_unit dst=0
    ret
