src/code/snapshots/tvm__code__tests__basic_loop_break.snap
---
source: src/code/tests.rs
expression: "emit!(r#\"\n        loop {\n            let v = 0;\n            break;\n            let v = 1;\n        }\n    \"#)"
---
function "main" {
  registers: 1 (0 params)
  constants: []
  bytecode: (6 ops) [
    smi 0, r0  // let v = 0;
    jmp +3     // break;
    smi 1, r0  // let v = 1;
    jmp -3     // }
    ret        // 
    stop       //   
  ]
}


