src/code/snapshots/tvm__code__tests__comparison.snap
---
source: src/code/tests.rs
expression: "emit!\n(r#\"\n        let a = 1;\n        let b = 2;\n\n        a == b;\n        a != b;\n        a < b;\n        a > b;\n        a <= b;\n        a >= b;\n    \"#)"
---
fn main
  registers: 5
  literals: []
  bytecode:
    load_i16 dst=1 value=1
    load_i16 dst=2 value=2
    cmp_eq_i64 dst=3 lhs=1 rhs=2
    cmp_ne_i64 dst=3 lhs=1 rhs=2
    cmp_lt_i64 dst=3 lhs=1 rhs=2
    cmp_gt_i64 dst=3 lhs=1 rhs=2
    cmp_le_i64 dst=3 lhs=1 rhs=2
    cmp_ge_i64 dst=3 lhs=1 rhs=2
    load_unit dst=0
    ret
