src/code/snapshots/tvm__code__tests__function_call_indirect.snap
---
source: src/code/tests.rs
expression: "emit!(r#\"\n        fn f(v: int) -> int {\n            v\n        }\n\n        let g = f;\n        g(10);\n    \"#)"
---
function "main" {
  registers: 4 (0 params)
  literals: []
  bytecode: (6 ops) [
    fn f0, r1   // let g = f;
    mov r1, r2  // g(10);
    smi 10, r3  // 
    call r2     // 
    unit r0     // 
    ret         //   
  ]
}

function "f" #0 {
  registers: 2 (1 params)
  literals: []
  bytecode: (2 ops) [
    mov r1, r0  // 
    ret         //   
  ]
}


