src/code/snapshots/tvm__code__tests__functions.snap
---
source: src/code/tests.rs
expression: "emit!\n(r#\"\n        fn f(v: int) -> int {\n            v + 1\n        }\n\n        fn g() -> int {\n            2\n        }\n    \"#)"
---
fn main
  registers: 1
  literals: []
  bytecode:
    load_unit dst=0
    ret
fn f
  registers: 3
  literals: []
  bytecode:
    load_i16 dst=2 value=1
    add_i64 dst=0 lhs=1 rhs=2
    ret
fn g
  registers: 1
  literals: []
  bytecode:
    load_i16 dst=0 value=2
    ret
