src/code/snapshots/tvm__code__tests__if_expr.snap
---
source: src/code/tests.rs
expression: "emit!\n(r#\"\n        if true {\n            0\n        } else if true {\n            1\n        } else {\n            2\n        }\n    \"#)"
---
fn main
  registers: 1
  literals: []
  bytecode:
    load_true dst=0
    jump_if_false condition=0 offset=3
    load_i16 dst=0 value=0
    jump offset=6
    load_true dst=0
    jump_if_false condition=0 offset=3
    load_i16 dst=0 value=1
    jump offset=2
    load_i16 dst=0 value=2
    ret
